--- a/Q_and_A/templates/home.html
+++ b/Q_and_A/templates/home.html
@@ -123,6 +123,7 @@
                       <option value='mcq'>MCQ</option>
                       <option value='faq'>FAQs</option>
                       <option value='tf'>True/False</option>
+                      <option value='br'>Brief</option>
                     </select>
                     <br> Please enter the number of questions to be generated <br>
                     <input type="number" name='count' value=4>
