--- a/Q_and_A/templates/home.html
+++ b/Q_and_A/templates/home.html
@@ -177,7 +177,7 @@
       </div>
       <!-- Footer -->
       <div class="w3-container w3-center" style="background-color:#383838;color: #FFFFFF;">
-          <a class="w3-xlarge w3-padding-32 w3-hover-opacity" target="_blank" style="text-decoration: none;"> Made by Anishka Moona & Swapnil Singh </a>&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="w3-xlarge w3-padding-32 w3-hover-opacity" target="_blank" style="text-decoration: none;"> Made by Swapnil Singh & Anishka Moona</a>&nbsp;&nbsp;&nbsp;&nbsp;
       </div>
       </body>
 </html>
